--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
     </section>
   </main>
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "fa5c52125b6f4ab0b03dd7110e3670ce"
+    });
+  </script>
+
   <script>
     let form = document.querySelector('form');
     form.addEventListener('submit', e => {
@@ -100,8 +107,79 @@
 
     let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
 
-    // Start your code here
-    // You may move this JS to another file if you wish
+    errorBtns[0].addEventListener('click', function() {
+      console.log("log");
+    });
+    errorBtns[1].addEventListener('click', function() {
+      console.error("error");
+    });
+    errorBtns[2].addEventListener('click', function() {
+      console.count("count");
+    });
+    errorBtns[3].addEventListener('click', function() {
+      console.warn("warn");
+    });
+    errorBtns[4].addEventListener('click', function() {
+      console.assert((1 + 1) == 3,"assert 1 + 1 = 3");
+    });
+    errorBtns[5].addEventListener('click', function() {
+      console.clear();
+    });
+    errorBtns[6].addEventListener('click', function() {
+      console.dir(document);
+    });
+    errorBtns[7].addEventListener('click', function() {
+      console.dirxml(document);
+    });
+    errorBtns[8].addEventListener('click', function() {
+      console.group("group");
+    });
+    errorBtns[9].addEventListener('click', function() {
+      console.groupEnd();
+    });
+    errorBtns[10].addEventListener('click', function() {
+      console.table(["t", "a", "b", "l", "e"]);
+    });
+    errorBtns[11].addEventListener('click', function() {
+      console.time("timer");
+    });
+    errorBtns[12].addEventListener('click', function() {
+      console.timeEnd("timer");
+    });
+    errorBtns[13].addEventListener('click', function() {
+      console.trace(document);
+    });
+    errorBtns[14].addEventListener('click', function() {
+      trigger_a_global_error();
+    });
+
+    try {
+      throw new Error("This is an error");
+    } catch (error) {
+      console.log(error);
+    } finally {
+      console.log("finally block");
+    }
+
+    class lab_error extends Error {
+      constructor(message) {
+        super(message);
+        this.name = "Lab Error";
+      }
+    }
+
+    try {
+      throw new lab_error("This is a lab error.");
+    } catch (error) {
+      console.log(error);
+      console.log(error.name);
+      console.log(error.message);
+    }
+
+    window.onerror = function(message, url, line, column, error) {
+      console.error("Global Error Catched: " + message);
+    };
+
   </script>
 </body>
 
